2003/10/16  ***** v2.0.1 shipped *****

2003/10/16  fadden
    - Added workaround for bad HFS option lists created by GSHK.
    - Added junk-skipping feature.  Up to 1024 bytes of crud (e.g.
      MacBinary headers or HTTP remnants) will be searched for evidence
      of an archive.

2003/06/19  sheppy
    - Added support for resource forks and file and aux types when built
      for Mac OS X.

2003/03/18  ***** v2.0.0 shipped *****

2003/03/10  fadden
    - Added support for automatic high-ASCII text stripping.

2003/02/23  fadden
    - Added test-twirl to samples.

2003/02/22  fadden
    - Turn off EOL conversion when extracting disk images.
    - Added NuTestRecord().

2003/02/18  fadden
    - Added "original pathname" fields to NuFileDetails and NuErrorStatus.
    - Changed callback setters to return NuCallback instead of NuError.
    - Switched to case-sensitive filename comparisons.

2003/02/08  fadden
    - Upped version to v2.0.0.
    - Changed DataSource API.  Removed "doClose" and added an optional
      callback function that handles releasing of resources.  Necessary
      to make Win32 DLLs work right with unsuspecting apps.
    - Changed DataSource "copy" function to use refcounting.  Still
      not quite right, but it'll do for now.  Memory leaks in DataSource
      handling appear to be fixed.  (I love valgrind.)

2003/01/10  fadden
    - Added version numbers to header.
    - Added kNuValueMaskThreadless to control handling of "threadless"
      records.  Now records without threads can be silently "fixed" so
      the application does need to handle them specially.

2002/12/06  fadden
    - Made changes to allow NufxLib to be built as a Win32 DLL.

2002/10/20  ***** v1.1.0 shipped *****

2002/10/10  fadden
    - changed behavior so that deleting all records is allowed

2002/10/09  fadden
    - added support for "bzip2" compression via libbz2
    - added ability to selectively disable compression methods