@@ -1,3 +1,10 @@
+2004/03/09  fadden
+    - Set access permissions based on umask when extracting a "locked"
+      file.  My thanks to Matthew Fischer for sending a patch.
+    - Reject archives with a MasterEOF == 48, not <= 48.  There are
+      some otherwise valid archives created by an old version of ShrinkIt
+      that have MasterEOF==0.
+
 2003/10/16  ***** v2.0.1 shipped *****
 
 2003/10/16  fadden
